force-app/main/default/objects/Property__c/fields/Blacklisted__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>yes or No?</description>
    <inlineHelpText>Is it?</inlineHelpText>
    <label>Blacklisted?</label>
    <type>Checkbox</type>
</CustomField>