force-app/main/default/objects/Property__c/fields/BlacklistReason__c.field-meta.xml
<CustomField>
    <fullName>BlacklistReason__c</fullName>
    <description>Tell us why?</description>
    <inlineHelpText>Tell us why?</inlineHelpText>
    <label>Blacklist reason?</label>
    <type>TextArea</type>
</CustomField>