force-app/main/default/objects/Property__c/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is a help text which tells us if the house is ready to be used or not for the users.</inlineHelpText>
    <label>Furnished?</label>
    <type>Checkbox</type>
</CustomField>